--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "cocktail-api-search": "^1.0.21"
   },
   "devDependencies": {
     "cypress": "^9.4.1"
